--- a/index.html
+++ b/index.html
@@ -84,16 +84,32 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Waitress, Monte Santo Resort Hotel</h4>
+                  <h5>July, 2022–August, 2022</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Provided attentive breakfast service, ensuring a welcoming guest experience</li>
+                    <li>Coordinated with kitchen staff to accommodate special requests and maintain buffet quality</li>
+                    <li>Maintained cleanliness, processed payments, and upheld health and safety standards</li>
                   </ul>
                 </div>
-              </li>
+              </li>	
+			  <li class="biography-item row mb-2">
+                <!-- We're using a grid inside a grid so we can align logos and text -->
+                  <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
+                    <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  </div>
+                  <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
+                    <h4>Bartender, Afronation Festival</h4>
+                    <h5>August, 2024</h5>
+                    <!-- Use the list below to talk about your achievements -->
+                    <ul class="biography-details list-unstyled">
+                      <li>Served cocktails and beverages efficiently in a fast-paced, high-volume festival environment</li>
+                      <li>Engaged with customers to create a lively and welcoming atmosphere while handling transactions</li>
+                      <li>Maintained bar cleanliness, restocked supplies, and adhered to responsible alcohol service regulations</li>
+                    </ul>
+                  </div>
+              </li>		
 
               <!-- 2nd item in professional experience -->
               <li class="biography-item row mb-2">
@@ -102,8 +118,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>Bartender, Irish Pub</h4>
+                  <h5>September, 2024-March, 2025</h5>
+				  <ul class="biography-details list-unstyled">
+                    <li>Prepared and served a variety of classic and signature drinks in a lively Irish pub setting</li>
+                    <li>Engaged with the clients to create a friendly, authentic atmosphere while handling orders and payments</li>
+                    <li>Maintained bar cleanliness, restocked supplies, and ensured compliance with alcohol service regulations</li>
+                  </ul>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -124,12 +145,14 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h5>2023&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Audio specialist of "Like Father like Son"'s short-film</li>
+					<li>Audio specialist of "Trapped Inside"'s short-documentary</li>
+					<li>Member of BUas HUB radio</li>
+                    <li>Creator and producer of "The After Party" podcast</li>
+                    <li>Free Elective in Spanish</li>
                   </ul>
                 </div>
               </li>
@@ -143,7 +166,9 @@
                   <h4>High School Diploma, City High School</h4>
                   <h5>2018</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>Sciences and technology specialization</li>
+				    <li>Arts specialization</li>
+				    <li>Music specialization</li>
                   </ul>
                 </div>
               </li>
@@ -172,27 +197,27 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:emaaguas@gmail.com" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
+                  Email
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.instagram.com/ema.aguas?igsh=ZmZ3Z3hyNWtma284&utm_source=qr" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                  Instagram Profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://github.com/emaaguas" target="_blank">
                   <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
                   GitHub Profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/feed/" target="_blank">
                   <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                  Linkedin
                 </a>
               </li>
             </ul>
@@ -205,7 +230,7 @@
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Dutch</h5>
+                <h5 class="language-name w-50">Portuguese</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
@@ -229,7 +254,7 @@
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
+                <h5 class="language-name w-50">French</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
@@ -244,8 +269,15 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
+              <li class="skill-item">Creative, open minded, and team player</li>
               <li class="skill-item">Microsoft Office Power User</li>
+			  <li class="skill-item">Figma User</li>
+			  <li class="skill-item">Canva User</li>
+              <li class="skill-item">Adobe Illustrator user</li>
+			  <li class="skill-item">Adobe Photoshop user</li>
+              <li class="skill-item">Adobe Indesign user</li>
+			  <li class="skill-item">Adobe Audition user</li>
+			  <li class="skill-item">Meta user</li>
               <li class="skill-item">Driving Licence</li>
             </ul>
           </section>
@@ -255,8 +287,10 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Audio visuals</li>
+		      <li class="skill-item">Travelling</li>
+              <li class="skill-item">Volleyball</li>
+		      <li class="skill-item">Surf</li>
             </ul>
           </section>
 
