--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/santo.png" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Waitress, Monte Santo Resort Hotel</h4>
@@ -97,7 +97,7 @@
 			  <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                   <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                    <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                    <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/afronation.png" alt="Company logo" width="80">
                   </div>
                   <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                     <h4>Bartender, Afronation Festival</h4>
@@ -115,11 +115,11 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/ned.png" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Bartender, Irish Pub</h4>
-                  <h5>September, 2024-March, 2025</h5>
+                  <h4>Bartender, Ned Kelly's Irish Pub</h4>
+                  <h5>September, 2024-March 2025</h5>
 				  <ul class="biography-details list-unstyled">
                     <li>Prepared and served a variety of classic and signature drinks in a lively Irish pub setting</li>
                     <li>Engaged with the clients to create a friendly, authentic atmosphere while handling orders and payments</li>
@@ -160,11 +160,11 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/nobel.png" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>High School Diploma, Nobel British International School of Algarve</h4>
+                  <h5>2019-2023</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Sciences and technology specialization</li>
 				    <li>Arts specialization</li>
@@ -204,7 +204,7 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.instagram.com/ema.aguas?igsh=ZmZ3Z3hyNWtma284&utm_source=qr" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
                   Instagram Profile
                 </a>
               </li>
@@ -216,7 +216,7 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/feed/" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
+                  <img class="contact-icon" src="images/icons/in.svg" alt="Mobile Phone">
                   Linkedin
                 </a>
               </li>
@@ -278,7 +278,7 @@
               <li class="skill-item">Adobe Indesign user</li>
 			  <li class="skill-item">Adobe Audition user</li>
 			  <li class="skill-item">Meta user</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Driving License</li>
             </ul>
           </section>
 
