--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Firstname Lastname's Resumé</title>
+    <title>Ema Águas Resumé</title>
   </head>
   <!-- End of the head -->
 
@@ -49,8 +49,8 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Ema Águas</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h1 class="fw-bolder header-text playfair-display white-text">Ema Águas</h1>
+          <h5 class="fst-italic tagline poppins-thin white-text">Your expert in creative marketing.</h5>
         </div>
       </header>
 
@@ -69,7 +69,7 @@
           <!--
             <section> is yet another semantic element. The first one is for professional experience.
           -->
-          <section class="my-3 biography-section">
+          <section class="my-3 biography-section playfair-display blue-text">
             <h2>Professional Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
@@ -87,7 +87,7 @@
                   <h4>Waitress, Monte Santo Resort Hotel</h4>
                   <h5>July, 2022–August, 2022</h5>
                   <!-- Use the list below to talk about your achievements -->
-                  <ul class="biography-details list-unstyled">
+                  <ul class="biography-details list-unstyled poppins-thin">
                     <li>Provided attentive breakfast service, ensuring a welcoming guest experience</li>
                     <li>Coordinated with kitchen staff to accommodate special requests and maintain buffet quality</li>
                     <li>Maintained cleanliness, processed payments, and upheld health and safety standards</li>
@@ -103,7 +103,7 @@
                     <h4>Bartender, Afronation Festival</h4>
                     <h5>August, 2024</h5>
                     <!-- Use the list below to talk about your achievements -->
-                    <ul class="biography-details list-unstyled">
+                    <ul class="biography-details list-unstyled poppins-thin">
                       <li>Served cocktails and beverages efficiently in a fast-paced, high-volume festival environment</li>
                       <li>Engaged with customers to create a lively and welcoming atmosphere while handling transactions</li>
                       <li>Maintained bar cleanliness, restocked supplies, and adhered to responsible alcohol service regulations</li>
@@ -120,7 +120,7 @@
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Bartender, Ned Kelly's Irish Pub</h4>
                   <h5>September, 2024-March 2025</h5>
-				  <ul class="biography-details list-unstyled">
+				  <ul class="biography-details list-unstyled poppins-thin">
                     <li>Prepared and served a variety of classic and signature drinks in a lively Irish pub setting</li>
                     <li>Engaged with the clients to create a friendly, authentic atmosphere while handling orders and payments</li>
                     <li>Maintained bar cleanliness, restocked supplies, and ensured compliance with alcohol service regulations</li>
@@ -134,7 +134,7 @@
 
           <!-- We're done with jobs, let's move on to schools -->
 
-          <section class="my-3 biography-section">
+          <section class="my-3 biography-section playfair-display blue-text">
             <h2>Education</h2>
             <ul class="biography-list list-unstyled">
 
@@ -147,7 +147,7 @@
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
                   <h5>2023&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
-                  <ul class="biography-details list-unstyled">
+                  <ul class="biography-details list-unstyled poppins-thin">
                     <li>Audio specialist of "Like Father like Son"'s short-film</li>
 					<li>Audio specialist of "Trapped Inside"'s short-documentary</li>
 					<li>Member of BUas HUB radio</li>
@@ -165,7 +165,7 @@
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, Nobel British International School of Algarve</h4>
                   <h5>2019-2023</h5>
-                  <ul class="biography-details list-unstyled">
+                  <ul class="biography-details list-unstyled poppins-thin">
                     <li>Sciences and technology specialization</li>
 				    <li>Arts specialization</li>
 				    <li>Music specialization</li>
@@ -187,7 +187,7 @@
         <aside class="col-md-5 col-lg-4 col-xl-3 resume-aside">
 
           <!-- The first block will be contact details -->
-          <section class="my-3 aside-section">
+          <section class="my-3 aside-section playfair-display blue-text">
             <h2>Contact</h2>
             <!--
               A list of all your contact details.
@@ -198,25 +198,25 @@
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:emaaguas@gmail.com" target="_blank">
-                  <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
+                  <img class="contact-icon" src="images/icons/envelope.svg" alt="Email" width="20"> 
                   Email
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.instagram.com/ema.aguas?igsh=ZmZ3Z3hyNWtma284&utm_source=qr" target="_blank">
-                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook" width="20">
                   Instagram Profile
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/emaaguas" target="_blank">
-                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
+                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn" width="20">
                   GitHub Profile
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/feed/" target="_blank">
-                  <img class="contact-icon" src="images/icons/in.svg" alt="Mobile Phone">
+                  <img class="contact-icon" src="images/icons/in.svg" alt="Mobile Phone" width="20">
                   Linkedin
                 </a>
               </li>
@@ -225,40 +225,40 @@
 
           <!-- End of contact details, moving on to languages -->
 
-          <section class="my-3 aside-section">
+          <section class="my-3 aside-section playfair-display blue-text">
             <h2>Languages</h2>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Portuguese</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50 poppins-thin">Portuguese</h5>
+                <div class="language-level w-50 blue-line position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
+                  <div class="language-progress position-absolute blue-boarder h-100 w-100"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 poppins-thin white-text">Native</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">English</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50 poppins-thin">English</h5>
+                <div class="language-level w-50 blue-line position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-75"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Full proficiency</h6>
+                  <div class="language-progress position-absolute blue-boarder h-100 w-75"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 poppins-thin poppins-thin white-text">Full proficiency</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Spanish</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50 poppins-thin">Spanish</h5>
+                <div class="language-level w-50 blue-line position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
+                  <div class="language-progress position-absolute blue-boarder h-100 w-50"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 poppins-thin white-text">Advanced</h6>
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">French</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
+                <h5 class="language-name w-50 poppins-thin">French</h5>
+                <div class="language-level w-50 blue-line  position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
+                  <div class="language-progress position-absolute blue-boarder h-100 w-25"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1 poppins-thin white-text">Beginner</h6>
                 </div>
               </li>
             </ul>
@@ -266,9 +266,9 @@
 
           <!-- End of contact details, moving on to other skills -->
 
-          <section class="my-3 aside-section">
+          <section class="my-3 aside-section playfair-display blue-text">
             <h2>Other Skills</h2>
-            <ul class="skill-list list-unstyled">
+            <ul class="skill-list list-unstyled poppins-thin">
               <li class="skill-item">Creative, open minded, and team player</li>
               <li class="skill-item">Microsoft Office Power User</li>
 			  <li class="skill-item">Figma User</li>
@@ -284,9 +284,9 @@
 
           <!-- End of other skills, moving on to interest and hobbies -->
 
-          <section class="my-3 aside-section">
+          <section class="my-3 aside-section playfair-display blue-text">
             <h2>Interests &amp; Hobbies</h2>
-            <ul class="skill-list list-unstyled">
+            <ul class="skill-list list-unstyled poppins-thin">
               <li class="skill-item">Audio visuals</li>
 		      <li class="skill-item">Travelling</li>
               <li class="skill-item">Volleyball</li>
